# resume

./: .gitignore  LICENSE  Makefile  README.md  convert_pdf_to_png.py  pyproject.toml
fr/: README.md  abdullah_ozer_cv.tex
us/: abdullah_ozer_resume.tex
