[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Abdullah Ozer <abdullahozer11@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdf2image = "^1.17.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
